--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>About KunalRaghav</title>
         <link href="index.css" rel="stylesheet" type="text/css" >
-        <link href="icons/github.svg" rel="icon" type="image/svg" >
+        <link href="icons/KR2.png" rel="icon" type="image/svg" >
     </head>
     <body>
         <div id="About" class="section">
@@ -30,20 +30,20 @@
             <span><h1>Kunal Raghav</h1></span>
             <div id="def">
                 <p>Knows:</p>
-                    <ul>
-                        <li class="li">Python</li>
-                        <li class="li">C</li>
-                        <li class="li">Html</li>
-                        <li class="li">CSS</li>
-                        <li class="li">MarkDown</li>
+                    <ul class="knows">
+                        <li class="li" id="py">Python</li>
+                        <li class="li" id="c">C</li>
+                        <li class="li" id="html">Html</li>
+                        <li class="li" id="css">CSS</li>
+                        <li class="li" id="mkd">MarkDown</li>
                     </ul>
             </div>
         </div>
         <div id="pre" class="section">
                 <p>Previous Works:</p>
                 <ul>
-                    <li class="li"><a href="https://github.com/KunalRaghav/Python-Quiz">Python-Quiz</a></li>
-                    <li class="li"><a href="https://github.com/KunalRaghav/KunalRaghav.github.io">This Webpage</a></li>
+                    <li class="li" id="PyQ"><a href="https://github.com/KunalRaghav/Python-Quiz">Python-Quiz</a></li>
+                    <li class="li" id=""><a href="https://github.com/KunalRaghav/KunalRaghav.github.io">This Webpage</a></li>
                 </ul>
         </div>
     </body>
